decaf-compiler/samples/lex/badint.decaf.out

*** Error line 2.
0x
^
*** syntax error

